--- a/05-agentic-rag/code_samples/05-autogen-chromadb.ipynb
+++ b/05-agentic-rag/code_samples/05-autogen-chromadb.ipynb
@@ -13,30 +13,111 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "SQLite Version Fix\n",
+    "## SQLite Version Fix\n",
+    "\n",
     "If you encounter the error:\n",
     "```\n",
     "RuntimeError: Your system has an unsupported version of sqlite3. Chroma requires sqlite3 >= 3.35.0\n",
     "```\n",
     "\n",
-    "Uncomment this code block at the start of your notebook:"
+    "Try the following solutions in order:\n",
+    "\n",
+    "### Option 1: Install pysqlite3-binary (recommended)\n",
+    "Run the cell below first.\n",
+    "\n",
+    "### Option 2: If Option 1 fails, try installing with conda:\n",
+    "```bash\n",
+    "conda install -c conda-forge pysqlite3\n",
+    "```\n",
+    "\n",
+    "### Option 3: Update your Python environment:\n",
+    "```bash\n",
+    "conda update sqlite\n",
+    "# or\n",
+    "pip install --upgrade sqlite3\n",
+    "```"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Checking SQLite version...\n",
+      "Current SQLite version: 3.49.1\n",
+      "✅ SQLite version is compatible with ChromaDB\n",
+      "No SQLite fix needed - version is already compatible!\n"
+     ]
+    }
+   ],
    "source": [
-    "# %pip install pysqlite3-binary\n",
-    "# __import__('pysqlite3')\n",
-    "# import sys\n",
-    "# sys.modules['sqlite3'] = sys.modules.pop('pysqlite3')"
+    "# SQLite Version Fix - Option 1\n",
+    "import subprocess\n",
+    "import sys\n",
+    "\n",
+    "def install_and_import_pysqlite3():\n",
+    "    \"\"\"Install pysqlite3-binary and configure it to replace sqlite3\"\"\"\n",
+    "    try:\n",
+    "        # Install pysqlite3-binary\n",
+    "        subprocess.check_call([sys.executable, \"-m\", \"pip\", \"install\", \"pysqlite3-binary\"])\n",
+    "        print(\"✅ pysqlite3-binary installed successfully\")\n",
+    "        \n",
+    "        # Import and configure\n",
+    "        import pysqlite3\n",
+    "        sys.modules['sqlite3'] = sys.modules.pop('pysqlite3')\n",
+    "        print(\"✅ pysqlite3 configured to replace sqlite3\")\n",
+    "        return True\n",
+    "        \n",
+    "    except subprocess.CalledProcessError as e:\n",
+    "        print(f\"❌ Failed to install pysqlite3-binary: {e}\")\n",
+    "        return False\n",
+    "    except ImportError as e:\n",
+    "        print(f\"❌ Failed to import pysqlite3: {e}\")\n",
+    "        return False\n",
+    "    except Exception as e:\n",
+    "        print(f\"❌ Unexpected error: {e}\")\n",
+    "        return False\n",
+    "\n",
+    "def check_sqlite_version():\n",
+    "    \"\"\"Check the current SQLite version\"\"\"\n",
+    "    try:\n",
+    "        import sqlite3\n",
+    "        print(f\"Current SQLite version: {sqlite3.sqlite_version}\")\n",
+    "        \n",
+    "        # Check if version is sufficient for ChromaDB\n",
+    "        version_parts = [int(x) for x in sqlite3.sqlite_version.split('.')]\n",
+    "        if version_parts >= [3, 35, 0]:\n",
+    "            print(\"✅ SQLite version is compatible with ChromaDB\")\n",
+    "            return True\n",
+    "        else:\n",
+    "            print(\"❌ SQLite version is too old for ChromaDB (requires >= 3.35.0)\")\n",
+    "            return False\n",
+    "    except Exception as e:\n",
+    "        print(f\"❌ Error checking SQLite version: {e}\")\n",
+    "        return False\n",
+    "\n",
+    "# Check current SQLite version\n",
+    "print(\"Checking SQLite version...\")\n",
+    "if not check_sqlite_version():\n",
+    "    print(\"\\nAttempting to install and configure pysqlite3-binary...\")\n",
+    "    if install_and_import_pysqlite3():\n",
+    "        # Verify the fix worked\n",
+    "        print(\"\\nVerifying fix...\")\n",
+    "        check_sqlite_version()\n",
+    "    else:\n",
+    "        print(\"\\n⚠️  pysqlite3-binary installation failed.\")\n",
+    "        print(\"Please try one of the alternative solutions mentioned above.\")\n",
+    "else:\n",
+    "    print(\"No SQLite fix needed - version is already compatible!\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -45,7 +126,7 @@
        "True"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -79,9 +160,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\riahl\\OneDrive\\UKCareer\\Careers\\Resume\\Companies\\PrynGlobal\\FoundationsMVPBuild\\AzureDevops\\ai-agents-for-beginners\\Agentsenv\\Lib\\site-packages\\autogen_ext\\models\\azure\\_azure_ai_client.py:307: UserWarning: Missing required field 'structured_output' in ModelInfo. This field will be required in a future version of AutoGen.\n",
+      "  validate_model_info(config[\"model_info\"])\n"
+     ]
+    }
+   ],
    "source": [
     "client = AzureAIChatCompletionClient(\n",
     "    model=\"gpt-4o-mini\",\n",
@@ -107,9 +197,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\riahl\\.cache\\chroma\\onnx_models\\all-MiniLM-L6-v2\\onnx.tar.gz: 100%|██████████| 79.3M/79.3M [00:09<00:00, 8.68MiB/s]\n"
+     ]
+    }
+   ],
    "source": [
     "# Initialize ChromaDB with persistent storage\n",
     "chroma_client = chromadb.PersistentClient(path=\"./chroma_db\")\n",
@@ -156,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -252,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -306,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -354,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -369,10 +467,10 @@
       "--- Context Used ---\n",
       "Retrieved Context:\n",
       "Document: Contoso's travel insurance covers medical emergencies, trip cancellations, and lost baggage.\n",
-      "Metadata: {'source': 'training', 'type': 'explanation'}\n",
+      "Metadata: {'type': 'explanation', 'source': 'training'}\n",
       "\n",
       "Document: Contoso Travel offers luxury vacation packages to exotic destinations worldwide.\n",
-      "Metadata: {'source': 'training', 'type': 'explanation'}\n",
+      "Metadata: {'type': 'explanation', 'source': 'training'}\n",
       "\n",
       "\n",
       "-------------------\n",
@@ -388,7 +486,7 @@
       "--- Context Used ---\n",
       "Retrieved Context:\n",
       "Document: Popular destinations include the Maldives, Swiss Alps, and African safaris.\n",
-      "Metadata: {'source': 'training', 'type': 'explanation'}\n",
+      "Metadata: {'type': 'explanation', 'source': 'training'}\n",
       "\n",
       "Document: Contoso Travel offers luxury vacation packages to exotic destinations worldwide.\n",
       "Metadata: {'source': 'training', 'type': 'explanation'}\n",
@@ -402,7 +500,7 @@
       "Wind: 15 mph\n",
       "-------------------\n",
       "\n",
-      "Response: The weather in London is rainy with a temperature of 60°F, 80% humidity, and winds at 15 mph.\n",
+      "Response: The weather in London is 60°F, rainy, with a humidity of 80% and a wind speed of 15 mph.\n",
       "\n",
       "==================================================\n",
       "\n",
@@ -413,7 +511,7 @@
       "--- Context Used ---\n",
       "Retrieved Context:\n",
       "Document: Contoso Travel offers luxury vacation packages to exotic destinations worldwide.\n",
-      "Metadata: {'source': 'training', 'type': 'explanation'}\n",
+      "Metadata: {'type': 'explanation', 'source': 'training'}\n",
       "\n",
       "Document: Contoso Travel provides exclusive access to boutique hotels and private guided tours.\n",
       "Metadata: {'source': 'training', 'type': 'explanation'}\n",
@@ -427,7 +525,7 @@
       "Wind: 8 mph\n",
       "-------------------\n",
       "\n",
-      "Response: Contoso Travel offers luxury vacation packages to exotic destinations worldwide and provides exclusive access to boutique hotels and private guided tours. The weather in Paris is cloudy with a temperature of 68°F, 70% humidity, and winds at 8 mph.\n",
+      "Response: Contoso Travel offers luxury vacation packages to exotic destinations worldwide and provides exclusive access to boutique hotels and private guided tours. The weather in Paris is 68°F, cloudy, with a humidity of 70% and a wind speed of 8 mph.\n",
       "\n",
       "==================================================\n"
      ]
@@ -444,7 +542,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv",
+   "display_name": "Agentsenv",
    "language": "python",
    "name": "python3"
   },
@@ -458,7 +556,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.13.3"
   }
  },
  "nbformat": 4,
