--- a/05-agentic-rag/code_samples/05-semantic-kernel-azure-ai-agent.ipynb
+++ b/05-agentic-rag/code_samples/05-semantic-kernel-azure-ai-agent.ipynb
@@ -31,14 +31,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "ERROR: Could not find a version that satisfies the requirement pysqlite3-binary (from versions: none)\n",
+      "ERROR: No matching distribution found for pysqlite3-binary\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    },
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'pysqlite3'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mModuleNotFoundError\u001b[39m                       Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m get_ipython().run_line_magic(\u001b[33m'\u001b[39m\u001b[33mpip\u001b[39m\u001b[33m'\u001b[39m, \u001b[33m'\u001b[39m\u001b[33minstall pysqlite3-binary\u001b[39m\u001b[33m'\u001b[39m)\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m \u001b[38;5;28;43m__import__\u001b[39;49m\u001b[43m(\u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mpysqlite3\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[32m      3\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01msys\u001b[39;00m\n\u001b[32m      4\u001b[39m sys.modules[\u001b[33m'\u001b[39m\u001b[33msqlite3\u001b[39m\u001b[33m'\u001b[39m] = sys.modules.pop(\u001b[33m'\u001b[39m\u001b[33mpysqlite3\u001b[39m\u001b[33m'\u001b[39m)\n",
+      "\u001b[31mModuleNotFoundError\u001b[39m: No module named 'pysqlite3'"
+     ]
+    }
+   ],
    "source": [
-    "# %pip install pysqlite3-binary\n",
-    "# __import__('pysqlite3')\n",
-    "# import sys\n",
-    "# sys.modules['sqlite3'] = sys.modules.pop('pysqlite3')"
+    "%pip install pysqlite3-binary\n",
+    "__import__('pysqlite3')\n",
+    "import sys\n",
+    "sys.modules['sqlite3'] = sys.modules.pop('pysqlite3')"
    ]
   },
   {
@@ -51,12 +78,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Azure imports for project client and credentials\n",
-    "from azure.ai.projects.models import FileSearchTool, OpenAIFile, VectorStore\n",
+    "from azure.ai.agents.models import FileSearchTool\n",
+    "from azure.ai.agents.models import VectorStore\n",
     "from azure.identity.aio import DefaultAzureCredential\n",
     "\n",
     "# Semantic Kernel imports\n",
@@ -103,9 +131,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "AgentInitializationException",
+     "evalue": "Please provide a valid Azure AI endpoint.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mAgentInitializationException\u001b[39m              Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[5]\u001b[39m\u001b[32m, line 71\u001b[39m\n\u001b[32m     68\u001b[39m             \u001b[38;5;28;01mawait\u001b[39;00m client.agents.delete_agent(agent.id)\n\u001b[32m     69\u001b[39m             \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[33mCleaned up agent, thread, file, and vector store.\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m---> \u001b[39m\u001b[32m71\u001b[39m \u001b[38;5;28;01mawait\u001b[39;00m main()\n",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[5]\u001b[39m\u001b[32m, line 4\u001b[39m, in \u001b[36mmain\u001b[39m\u001b[34m()\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;28;01masync\u001b[39;00m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34mmain\u001b[39m():\n\u001b[32m      2\u001b[39m     \u001b[38;5;28;01masync\u001b[39;00m \u001b[38;5;28;01mwith\u001b[39;00m (\n\u001b[32m      3\u001b[39m         DefaultAzureCredential() \u001b[38;5;28;01mas\u001b[39;00m creds,\n\u001b[32m----> \u001b[39m\u001b[32m4\u001b[39m         \u001b[43mAzureAIAgent\u001b[49m\u001b[43m.\u001b[49m\u001b[43mcreate_client\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcredential\u001b[49m\u001b[43m=\u001b[49m\u001b[43mcreds\u001b[49m\u001b[43m)\u001b[49m \u001b[38;5;28;01mas\u001b[39;00m client,\n\u001b[32m      5\u001b[39m     ):\n\u001b[32m      6\u001b[39m         file: OpenAIFile = \u001b[38;5;28;01mawait\u001b[39;00m client.agents.upload_file_and_poll(file_path=\u001b[33m\"\u001b[39m\u001b[33mdocument.md\u001b[39m\u001b[33m\"\u001b[39m, purpose=\u001b[33m\"\u001b[39m\u001b[33massistants\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m      7\u001b[39m         vector_store: VectorStore = \u001b[38;5;28;01mawait\u001b[39;00m client.agents.create_vector_store_and_poll(\n\u001b[32m      8\u001b[39m             file_ids=[file.id], name=\u001b[33m\"\u001b[39m\u001b[33mmy_vectorstore\u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m      9\u001b[39m         )\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\riahl\\OneDrive\\UKCareer\\Careers\\Resume\\Companies\\PrynGlobal\\FoundationsMVPBuild\\AzureDevops\\ai-agents-for-beginners\\Agentsenv\\Lib\\site-packages\\semantic_kernel\\agents\\azure_ai\\azure_ai_agent.py:450\u001b[39m, in \u001b[36mAzureAIAgent.create_client\u001b[39m\u001b[34m(credential, endpoint, api_version, **kwargs)\u001b[39m\n\u001b[32m    448\u001b[39m     ai_agent_settings = AzureAIAgentSettings()\n\u001b[32m    449\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m ai_agent_settings.endpoint:\n\u001b[32m--> \u001b[39m\u001b[32m450\u001b[39m         \u001b[38;5;28;01mraise\u001b[39;00m AgentInitializationException(\u001b[33m\"\u001b[39m\u001b[33mPlease provide a valid Azure AI endpoint.\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m    451\u001b[39m     endpoint = ai_agent_settings.endpoint\n\u001b[32m    453\u001b[39m client_kwargs: \u001b[38;5;28mdict\u001b[39m[\u001b[38;5;28mstr\u001b[39m, Any] = {\n\u001b[32m    454\u001b[39m     **kwargs,\n\u001b[32m    455\u001b[39m     **({\u001b[33m\"\u001b[39m\u001b[33muser_agent\u001b[39m\u001b[33m\"\u001b[39m: SEMANTIC_KERNEL_USER_AGENT} \u001b[38;5;28;01mif\u001b[39;00m APP_INFO \u001b[38;5;28;01melse\u001b[39;00m {}),\n\u001b[32m    456\u001b[39m }\n",
+      "\u001b[31mAgentInitializationException\u001b[39m: Please provide a valid Azure AI endpoint."
+     ]
+    }
+   ],
    "source": [
     "async def main():\n",
     "    async with (\n",
@@ -199,7 +241,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Agentsenv",
    "language": "python",
    "name": "python3"
   },
@@ -213,7 +255,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.11"
+   "version": "3.13.3"
   }
  },
  "nbformat": 4,
