--- a/08-multi-agent/code_samples/08-python_multi_aiagent_bookinghotel.ipynb
+++ b/08-multi-agent/code_samples/08-python_multi_aiagent_bookinghotel.ipynb
@@ -68,15 +68,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install azure-identity\n",
-    "!pip install requests\n",
-    "!pip install semantic-kernel\n",
-    "!pip install --upgrade semantic_kernel\n",
-    "!pip install azure-cli"
+    "# !pip install azure-identity\n",
+    "# !pip install requests\n",
+    "# !pip install semantic-kernel\n",
+    "# !pip install --upgrade semantic_kernel\n",
+    "# !pip install azure-cli"
    ]
   },
   {
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -115,9 +115,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import os\n",
     "from dotenv import load_dotenv\n",
@@ -141,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -181,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -213,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -224,7 +235,7 @@
    },
    "outputs": [],
    "source": [
-    "from azure.ai.projects.models import CodeInterpreterTool"
+    "from azure.ai.agents.models import CodeInterpreterTool"
    ]
   },
   {
@@ -237,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -257,17 +268,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Explanation:\n",
-    "\n",
-    "The line of code initializes an AzureAIAgentSettings object with default or predefined settings by calling the create() method. This settings object (ai_agent_settings) can then be used to configure and manage an AzureAIAgent instance."
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -276,9 +278,24 @@
      "kernelName": "csharp"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "The create method is deprecated. Use the __new__ method instead.\n"
+     ]
+    }
+   ],
    "source": [
-    "ai_agent_settings = AzureAIAgentSettings.create()"
+    "# Get connection string and model deployment name from environment variables\n",
+    "PROJECT_CONNECTION_STRING = os.getenv('AZURE_AI_AGENT_PROJECT_CONNECTION_STRING')\n",
+    "MODEL_DEPLOYMENT_NAME = os.getenv('AZURE_AI_AGENT_MODEL_DEPLOYMENT_NAME')\n",
+    "\n",
+    "# Create settings with the connection string\n",
+    "ai_agent_settings = AzureAIAgentSettings.create(\n",
+    "    azure_ai_project_connection_string=PROJECT_CONNECTION_STRING\n",
+    ")"
    ]
   },
   {
@@ -291,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -337,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -348,12 +365,12 @@
    },
    "outputs": [],
    "source": [
-    "SERPAPI_SEARCH_API_KEY=os.getenv('SERPAPI_SEARCH_API_KEY')"
+    "SERPAPI_SEARCH_API_KEY = os.getenv('SERPAPI_SEARCH_API_KEY')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -377,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -489,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -509,14 +526,14 @@
     "            DefaultAzureCredential() as creds,\n",
     "            AzureAIAgent.create_client(\n",
     "                credential=creds,\n",
-    "                conn_str=ai_agent_settings.project_connection_string.get_secret_value(),\n",
+    "                conn_str=PROJECT_CONNECTION_STRING,\n",
     "            ) as client,\n",
     "        ):\n",
     "\n",
     "            code_interpreter = CodeInterpreterTool()\n",
     "            \n",
     "            agent_definition = await client.agents.create_agent(\n",
-    "                model=ai_agent_settings.model_deployment_name,\n",
+    "                model=MODEL_DEPLOYMENT_NAME,\n",
     "                tools=code_interpreter.definitions,\n",
     "                tool_resources=code_interpreter.resources,\n",
     "            )\n",
@@ -590,7 +607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -599,13 +616,26 @@
      "kernelName": "csharp"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "AgentInitializationException",
+     "evalue": "Please provide a valid Azure AI endpoint.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mAgentInitializationException\u001b[39m              Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[43]\u001b[39m\u001b[32m, line 3\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;28;01masync\u001b[39;00m \u001b[38;5;28;01mwith\u001b[39;00m (\n\u001b[32m      2\u001b[39m     DefaultAzureCredential() \u001b[38;5;28;01mas\u001b[39;00m creds,\n\u001b[32m----> \u001b[39m\u001b[32m3\u001b[39m     \u001b[43mAzureAIAgent\u001b[49m\u001b[43m.\u001b[49m\u001b[43mcreate_client\u001b[49m\u001b[43m(\u001b[49m\n\u001b[32m      4\u001b[39m \u001b[43m        \u001b[49m\u001b[43mcredential\u001b[49m\u001b[43m=\u001b[49m\u001b[43mcreds\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m      5\u001b[39m \u001b[43m        \u001b[49m\u001b[43mendpoint\u001b[49m\u001b[43m=\u001b[49m\u001b[43mai_agent_settings\u001b[49m\u001b[43m.\u001b[49m\u001b[43mendpoint\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m      6\u001b[39m \u001b[43m    \u001b[49m\u001b[43m)\u001b[49m \u001b[38;5;28;01mas\u001b[39;00m client,\n\u001b[32m      7\u001b[39m ):\n\u001b[32m      8\u001b[39m     BOOKING_AGENT_NAME = \u001b[33m\"\u001b[39m\u001b[33mBookingAgent\u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m      9\u001b[39m     BOOKING_AGENT_INSTRUCTIONS = \u001b[33m\"\"\"\u001b[39m\n\u001b[32m     10\u001b[39m \u001b[33m    You are a booking agent. Help me book flights or hotels.\u001b[39m\n\u001b[32m     11\u001b[39m \n\u001b[32m   (...)\u001b[39m\u001b[32m     22\u001b[39m \u001b[33m        Property Name | Property Description | Check-in Time | Check-out Time | Prices | Nearby Places | Hotel Class | GPS Coordinates.\u001b[39m\n\u001b[32m     23\u001b[39m \u001b[33m    \u001b[39m\u001b[33m\"\"\"\u001b[39m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\riahl\\OneDrive\\UKCareer\\Careers\\Resume\\Companies\\PrynGlobal\\FoundationsMVPBuild\\AzureDevops\\ai-agents-for-beginners\\Agentsenv\\Lib\\site-packages\\semantic_kernel\\agents\\azure_ai\\azure_ai_agent.py:450\u001b[39m, in \u001b[36mAzureAIAgent.create_client\u001b[39m\u001b[34m(credential, endpoint, api_version, **kwargs)\u001b[39m\n\u001b[32m    448\u001b[39m     ai_agent_settings = AzureAIAgentSettings()\n\u001b[32m    449\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m ai_agent_settings.endpoint:\n\u001b[32m--> \u001b[39m\u001b[32m450\u001b[39m         \u001b[38;5;28;01mraise\u001b[39;00m AgentInitializationException(\u001b[33m\"\u001b[39m\u001b[33mPlease provide a valid Azure AI endpoint.\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m    451\u001b[39m     endpoint = ai_agent_settings.endpoint\n\u001b[32m    453\u001b[39m client_kwargs: \u001b[38;5;28mdict\u001b[39m[\u001b[38;5;28mstr\u001b[39m, Any] = {\n\u001b[32m    454\u001b[39m     **kwargs,\n\u001b[32m    455\u001b[39m     **({\u001b[33m\"\u001b[39m\u001b[33muser_agent\u001b[39m\u001b[33m\"\u001b[39m: SEMANTIC_KERNEL_USER_AGENT} \u001b[38;5;28;01mif\u001b[39;00m APP_INFO \u001b[38;5;28;01melse\u001b[39;00m {}),\n\u001b[32m    456\u001b[39m }\n",
+      "\u001b[31mAgentInitializationException\u001b[39m: Please provide a valid Azure AI endpoint."
+     ]
+    }
+   ],
    "source": [
     "async with (\n",
     "    DefaultAzureCredential() as creds,\n",
     "    AzureAIAgent.create_client(\n",
     "        credential=creds,\n",
-    "        conn_str=ai_agent_settings.project_connection_string.get_secret_value(),\n",
+    "        endpoint=ai_agent_settings.endpoint,\n",
     "    ) as client,\n",
     "):\n",
     "    BOOKING_AGENT_NAME = \"BookingAgent\"\n",
@@ -632,7 +662,7 @@
     "\n",
     "    # Create agent definition\n",
     "    booking_agent_definition = await client.agents.create_agent(\n",
-    "        model=ai_agent_settings.model_deployment_name,\n",
+    "        model=MODEL_DEPLOYMENT_NAME,\n",
     "        name=BOOKING_AGENT_NAME,\n",
     "        instructions=BOOKING_AGENT_INSTRUCTIONS,\n",
     "    )\n",
@@ -650,7 +680,7 @@
     "\n",
     "    # Create agent definition\n",
     "    save_agent_definition = await client.agents.create_agent(\n",
-    "        model=ai_agent_settings.model_deployment_name,\n",
+    "        model=MODEL_DEPLOYMENT_NAME,\n",
     "        name=SAVE_AGENT_NAME,\n",
     "        instructions=SAVE_AGENT_INSTRUCTIONS\n",
     "    )\n",
@@ -698,7 +728,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "3.12.1",
+   "display_name": "Agentsenv",
    "language": "python",
    "name": "python3"
   },
@@ -712,7 +742,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.1"
+   "version": "3.13.3"
   },
   "polyglot_notebook": {
    "kernelInfo": {
