--- a/01-intro-to-ai-agents/code_samples/01-semantic-kernel.ipynb
+++ b/01-intro-to-ai-agents/code_samples/01-semantic-kernel.ipynb
@@ -190,7 +190,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Agentsenv",
    "language": "python",
    "name": "python3"
   },
@@ -204,7 +204,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.10"
+   "version": "3.13.3"
   }
  },
  "nbformat": 4,
