--- a/02-explore-agentic-frameworks/code_samples/02-azureaiagent.ipynb
+++ b/02-explore-agentic-frameworks/code_samples/02-azureaiagent.ipynb
@@ -206,7 +206,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Agentsenv",
    "language": "python",
    "name": "python3"
   },
@@ -220,7 +220,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.11"
+   "version": "3.13.3"
   }
  },
  "nbformat": 4,
