--- a/02-explore-agentic-frameworks/code_samples/02-semantic-kernel.ipynb
+++ b/02-explore-agentic-frameworks/code_samples/02-semantic-kernel.ipynb
@@ -245,7 +245,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Agentsenv",
    "language": "python",
    "name": "python3"
   },
@@ -259,7 +259,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.12"
+   "version": "3.13.3"
   }
  },
  "nbformat": 4,
