--- a/03-agentic-design-patterns/code_samples/03-semantic-kernel.ipynb
+++ b/03-agentic-design-patterns/code_samples/03-semantic-kernel.ipynb
@@ -261,7 +261,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Agentsenv",
    "language": "python",
    "name": "python3"
   },
@@ -275,7 +275,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.11"
+   "version": "3.13.3"
   }
  },
  "nbformat": 4,
