--- a/04-tool-use/code_samples/04-autogen.ipynb
+++ b/04-tool-use/code_samples/04-autogen.ipynb
@@ -204,7 +204,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Agentsenv",
    "language": "python",
    "name": "python3"
   },
@@ -218,7 +218,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.1"
+   "version": "3.13.3"
   }
  },
  "nbformat": 4,
