--- a/04-tool-use/code_samples/04-semantic-kernel-python-aiagent-bookinghotel.ipynb
+++ b/04-tool-use/code_samples/04-semantic-kernel-python-aiagent-bookinghotel.ipynb
@@ -458,7 +458,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Agentsenv",
    "language": "python",
    "name": "python3"
   },
@@ -472,7 +472,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.11"
+   "version": "3.13.3"
   }
  },
  "nbformat": 4,
