--- a/04-tool-use/code_samples/04-semantic-kernel-tool.ipynb
+++ b/04-tool-use/code_samples/04-semantic-kernel-tool.ipynb
@@ -290,7 +290,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Agentsenv",
    "language": "python",
    "name": "python3"
   },
@@ -304,7 +304,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.11"
+   "version": "3.13.3"
   }
  },
  "nbformat": 4,
