--- a/05-agentic-rag/code_samples/05-semantic-kernel-azuresearch.ipynb
+++ b/05-agentic-rag/code_samples/05-semantic-kernel-azuresearch.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,9 +165,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index 'travel-documents' already exists, using the existing index.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[<azure.search.documents._generated.models._models_py3.IndexingResult at 0x1cb9dc33620>,\n",
+       " <azure.search.documents._generated.models._models_py3.IndexingResult at 0x1cb9dc465d0>,\n",
+       " <azure.search.documents._generated.models._models_py3.IndexingResult at 0x1cb9dc47750>,\n",
+       " <azure.search.documents._generated.models._models_py3.IndexingResult at 0x1cb9dc01a70>,\n",
+       " <azure.search.documents._generated.models._models_py3.IndexingResult at 0x1cb9dc01e00>]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Initialize Azure AI Search with persistent storage\n",
     "search_service_endpoint = os.getenv(\"AZURE_SEARCH_SERVICE_ENDPOINT\")\n",
@@ -218,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -241,9 +263,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div style='margin-bottom:10px'><div style='font-weight:bold'>User:</div><div style='margin-left:20px'>Can you explain Contoso's travel insurance coverage?</div></div><div style='margin-bottom:20px'><div style='font-weight:bold'>TravelAgent:</div><div style='margin-left:20px; white-space:pre-wrap'>Contoso's travel insurance coverage includes the following key areas:\n",
+       "\n",
+       "1. **Medical Emergencies**: Coverage for unexpected medical situations while traveling.\n",
+       "2. **Trip Cancellations**: Financial protection if you need to cancel your trip for covered reasons.\n",
+       "3. **Lost Baggage**: Compensation for lost or delayed luggage.\n",
+       "\n",
+       "If you have specific questions about the insurance or need more details, feel free to ask!</div></div><hr>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div style='margin-bottom:10px'><div style='font-weight:bold'>User:</div><div style='margin-left:20px'>What is the average temperature of the Maldives?</div></div><div style='margin-bottom:20px'><div style='font-weight:bold'>TravelAgent:</div><div style='margin-left:20px; white-space:pre-wrap'>The average temperature in the Maldives is approximately 82°F (28°C). It's a warm and tropical destination, ideal for a beach getaway! If you need more information or have any further questions, feel free to ask.</div></div><hr>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div style='margin-bottom:10px'><div style='font-weight:bold'>User:</div><div style='margin-left:20px'>What is a good cold destination offered by Contoso and what is it average temperature?</div></div><div style='margin-bottom:20px'><div style='font-weight:bold'>TravelAgent:</div><div style='margin-left:20px; white-space:pre-wrap'>A good cold destination offered by Contoso is the **Swiss Alps**. The average temperature there is approximately **45°F (7°C)**. It's a fantastic location for enjoying winter sports and breathtaking snowy landscapes! If you need more information or have other questions, just let me know!</div></div><hr>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "async def main():\n",
     "    thread: ChatHistoryAgentThread | None = None\n",
@@ -364,7 +429,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Agentsenv",
    "language": "python",
    "name": "python3"
   },
@@ -378,7 +443,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.11"
+   "version": "3.13.3"
   }
  },
  "nbformat": 4,
