--- a/07-planning-design/code_samples/07-autogen.ipynb
+++ b/07-planning-design/code_samples/07-autogen.ipynb
@@ -47,7 +47,16 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\riahl\\OneDrive\\UKCareer\\Careers\\Resume\\Companies\\PrynGlobal\\FoundationsMVPBuild\\AzureDevops\\ai-agents-for-beginners\\Agentsenv\\Lib\\site-packages\\autogen_ext\\models\\azure\\_azure_ai_client.py:307: UserWarning: Missing required field 'structured_output' in ModelInfo. This field will be required in a future version of AutoGen.\n",
+      "  validate_model_info(config[\"model_info\"])\n"
+     ]
+    }
+   ],
    "source": [
     "client = AzureAIChatCompletionClient(\n",
     "    model=\"gpt-4o-mini\",\n",
@@ -66,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -78,17 +87,17 @@
       "               'task_details': 'Book round-trip flights from Singapore to '\n",
       "                               'Melbourne.'},\n",
       "              {'assigned_agent': 'hotel_booking',\n",
-      "               'task_details': 'Book family-friendly accommodations in '\n",
+      "               'task_details': 'Book family-friendly accommodation in '\n",
       "                               'Melbourne.'},\n",
       "              {'assigned_agent': 'car_rental',\n",
-      "               'task_details': 'Arrange car rental for the family to explore '\n",
+      "               'task_details': 'Arrange car rental for convenient travel in '\n",
       "                               'Melbourne.'},\n",
       "              {'assigned_agent': 'activities_booking',\n",
       "               'task_details': 'Book family-friendly activities and '\n",
       "                               'attractions in Melbourne.'},\n",
       "              {'assigned_agent': 'destination_info',\n",
-      "               'task_details': 'Provide information about family-friendly '\n",
-      "                               'destinations in Melbourne.'}]}\n"
+      "               'task_details': 'Provide information about family attractions '\n",
+      "                               'and tips in Melbourne.'}]}\n"
      ]
     }
    ],
@@ -139,7 +148,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Agentsenv",
    "language": "python",
    "name": "python3"
   },
@@ -153,7 +162,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.1"
+   "version": "3.13.3"
   }
  },
  "nbformat": 4,
