--- a/07-planning-design/code_samples/07-semantic-kernel.ipynb
+++ b/07-planning-design/code_samples/07-semantic-kernel.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,9 +42,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'List' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[3]\u001b[39m\u001b[32m, line 8\u001b[39m\n\u001b[32m      2\u001b[39m     assigned_agent: \u001b[38;5;28mstr\u001b[39m = Field(\n\u001b[32m      3\u001b[39m         description=\u001b[33m\"\u001b[39m\u001b[33mThe specific agent assigned to handle this subtask\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m      4\u001b[39m     task_details: \u001b[38;5;28mstr\u001b[39m = Field(\n\u001b[32m      5\u001b[39m         description=\u001b[33m\"\u001b[39m\u001b[33mDetailed description of what needs to be done for this subtask\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m----> \u001b[39m\u001b[32m8\u001b[39m \u001b[38;5;28;43;01mclass\u001b[39;49;00m\u001b[38;5;250;43m \u001b[39;49m\u001b[34;43;01mTravelPlan\u001b[39;49;00m\u001b[43m(\u001b[49m\u001b[43mBaseModel\u001b[49m\u001b[43m)\u001b[49m\u001b[43m:\u001b[49m\n\u001b[32m      9\u001b[39m \u001b[43m    \u001b[49m\u001b[43mmain_task\u001b[49m\u001b[43m:\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mstr\u001b[39;49m\u001b[43m \u001b[49m\u001b[43m=\u001b[49m\u001b[43m \u001b[49m\u001b[43mField\u001b[49m\u001b[43m(\u001b[49m\n\u001b[32m     10\u001b[39m \u001b[43m        \u001b[49m\u001b[43mdescription\u001b[49m\u001b[43m=\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mThe overall travel request from the user\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[32m     11\u001b[39m \u001b[43m    \u001b[49m\u001b[43msubtasks\u001b[49m\u001b[43m:\u001b[49m\u001b[43m \u001b[49m\u001b[43mList\u001b[49m\u001b[43m[\u001b[49m\u001b[43mSubTask\u001b[49m\u001b[43m]\u001b[49m\u001b[43m \u001b[49m\u001b[43m=\u001b[49m\u001b[43m \u001b[49m\u001b[43mField\u001b[49m\u001b[43m(\u001b[49m\n\u001b[32m     12\u001b[39m \u001b[43m        \u001b[49m\u001b[43mdescription\u001b[49m\u001b[43m=\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mList of subtasks broken down from the main task, each assigned to a specialized agent\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[3]\u001b[39m\u001b[32m, line 11\u001b[39m, in \u001b[36mTravelPlan\u001b[39m\u001b[34m()\u001b[39m\n\u001b[32m      8\u001b[39m \u001b[38;5;28;01mclass\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mTravelPlan\u001b[39;00m(BaseModel):\n\u001b[32m      9\u001b[39m     main_task: \u001b[38;5;28mstr\u001b[39m = Field(\n\u001b[32m     10\u001b[39m         description=\u001b[33m\"\u001b[39m\u001b[33mThe overall travel request from the user\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m---> \u001b[39m\u001b[32m11\u001b[39m     subtasks: \u001b[43mList\u001b[49m[SubTask] = Field(\n\u001b[32m     12\u001b[39m         description=\u001b[33m\"\u001b[39m\u001b[33mList of subtasks broken down from the main task, each assigned to a specialized agent\u001b[39m\u001b[33m\"\u001b[39m)\n",
+      "\u001b[31mNameError\u001b[39m: name 'List' is not defined"
+     ]
+    }
+   ],
    "source": [
     "class SubTask(BaseModel):\n",
     "    assigned_agent: str = Field(\n",
@@ -62,9 +75,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'TravelPlan' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[4]\u001b[39m\u001b[32m, line 13\u001b[39m\n\u001b[32m      2\u001b[39m AGENT_INSTRUCTIONS = \u001b[33m\"\"\"\u001b[39m\u001b[33mYou are an planner agent.\u001b[39m\n\u001b[32m      3\u001b[39m \u001b[33m    Your job is to decide which agents to run based on the user\u001b[39m\u001b[33m'\u001b[39m\u001b[33ms request.\u001b[39m\n\u001b[32m      4\u001b[39m \u001b[33m    Below are the available agents specialised in different tasks:\u001b[39m\n\u001b[32m   (...)\u001b[39m\u001b[32m      9\u001b[39m \u001b[33m    - DestinationInfo: For providing information about destinations\u001b[39m\n\u001b[32m     10\u001b[39m \u001b[33m    - DefaultAgent: For handling general requests\u001b[39m\u001b[33m\"\"\"\u001b[39m\n\u001b[32m     12\u001b[39m \u001b[38;5;66;03m# Create the prompt execution settings and configure the Pydantic model response format\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m13\u001b[39m settings = OpenAIChatPromptExecutionSettings(response_format=\u001b[43mTravelPlan\u001b[49m)\n\u001b[32m     15\u001b[39m agent = ChatCompletionAgent(\n\u001b[32m     16\u001b[39m     service=chat_completion_service,\n\u001b[32m     17\u001b[39m     name=AGENT_NAME,\n\u001b[32m     18\u001b[39m     instructions=AGENT_INSTRUCTIONS,\n\u001b[32m     19\u001b[39m     arguments=KernelArguments(settings) \n\u001b[32m     20\u001b[39m )\n",
+      "\u001b[31mNameError\u001b[39m: name 'TravelPlan' is not defined"
+     ]
+    }
+   ],
    "source": [
     "AGENT_NAME = \"TravelAgent\"\n",
     "AGENT_INSTRUCTIONS = \"\"\"You are an planner agent.\n",
@@ -90,9 +115,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'agent' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[5]\u001b[39m\u001b[32m, line 54\u001b[39m\n\u001b[32m     51\u001b[39m         \u001b[38;5;66;03m# Display formatted HTML\u001b[39;00m\n\u001b[32m     52\u001b[39m         display(HTML(html_output))\n\u001b[32m---> \u001b[39m\u001b[32m54\u001b[39m \u001b[38;5;28;01mawait\u001b[39;00m main()\n",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[5]\u001b[39m\u001b[32m, line 24\u001b[39m, in \u001b[36mmain\u001b[39m\u001b[34m()\u001b[39m\n\u001b[32m     21\u001b[39m html_output += \u001b[33m\"\u001b[39m\u001b[33m</div>\u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m     23\u001b[39m \u001b[38;5;66;03m# Collect the agent's response\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m24\u001b[39m response = \u001b[38;5;28;01mawait\u001b[39;00m \u001b[43magent\u001b[49m.get_response(messages=user_input, thread=thread)\n\u001b[32m     25\u001b[39m thread = response.thread\n\u001b[32m     27\u001b[39m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[32m     28\u001b[39m     \u001b[38;5;66;03m# Try to validate the response as a TravelPlan\u001b[39;00m\n",
+      "\u001b[31mNameError\u001b[39m: name 'agent' is not defined"
+     ]
+    }
+   ],
    "source": [
     "from IPython.display import display, HTML\n",
     "\n",
@@ -191,7 +229,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Agentsenv",
    "language": "python",
    "name": "python3"
   },
@@ -205,7 +243,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.11"
+   "version": "3.13.3"
   }
  },
  "nbformat": 4,
