--- a/08-multi-agent/code_samples/08-autogen.ipynb
+++ b/08-multi-agent/code_samples/08-autogen.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,9 +25,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\riahl\\OneDrive\\UKCareer\\Careers\\Resume\\Companies\\PrynGlobal\\FoundationsMVPBuild\\AzureDevops\\ai-agents-for-beginners\\Agentsenv\\Lib\\site-packages\\autogen_ext\\models\\azure\\_azure_ai_client.py:307: UserWarning: Missing required field 'structured_output' in ModelInfo. This field will be required in a future version of AutoGen.\n",
+      "  validate_model_info(config[\"model_info\"])\n"
+     ]
+    }
+   ],
    "source": [
     "client = AzureAIChatCompletionClient(\n",
     "    model=\"gpt-4o-mini\",\n",
@@ -46,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,9 +87,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "id='b0fe80dd-5a5b-46aa-a444-7337c72d6c0c' source='user' models_usage=None metadata={} created_at=datetime.datetime(2025, 7, 19, 18, 44, 30, 291517, tzinfo=datetime.timezone.utc) content='I would like to plan a trip to Paris.' type='TextMessage'\n",
+      "id='0e3aaba0-f7ab-428e-95fc-24cd881c68b6' source='planner_agent' models_usage=RequestUsage(prompt_tokens=100, completion_tokens=11) metadata={} created_at=datetime.datetime(2025, 7, 19, 18, 44, 31, 197363, tzinfo=datetime.timezone.utc) content='Visit the Louvre Museum for an iconic cultural experience.' type='TextMessage'\n",
+      "id='45dbe13f-9a33-4254-a9e4-bb5775136c37' source='concierge_agent' models_usage=RequestUsage(prompt_tokens=112, completion_tokens=59) metadata={} created_at=datetime.datetime(2025, 7, 19, 18, 44, 33, 320186, tzinfo=datetime.timezone.utc) content='While the Louvre Museum is indeed an iconic destination, it can be quite touristy and crowded. To refine the recommendation, consider suggesting a lesser-known museum or art space that showcases local artists or unique themes. This way, travelers can immerse themselves in authentic Parisian culture without the large crowds.' type='TextMessage'\n",
+      "id='866db9a0-8a4f-4903-90c9-d344cd7d37b7' source='planner_agent' models_usage=RequestUsage(prompt_tokens=176, completion_tokens=21) metadata={} created_at=datetime.datetime(2025, 7, 19, 18, 44, 34, 33264, tzinfo=datetime.timezone.utc) content=\"Explore the Musée de l'Orangerie, home to Monet's Water Lilies and lesser crowds.\" type='TextMessage'\n",
+      "id='e3bd8ad9-390a-4643-9aa4-d110bf26432e' source='concierge_agent' models_usage=RequestUsage(prompt_tokens=198, completion_tokens=4) metadata={} created_at=datetime.datetime(2025, 7, 19, 18, 44, 34, 398609, tzinfo=datetime.timezone.utc) content='APPROVE' type='TextMessage'\n",
+      "Stop Reason: Text 'APPROVE' mentioned\n"
+     ]
+    }
+   ],
    "source": [
     "termination = TextMentionTermination(\"APPROVE\")\n",
     "team = RoundRobinGroupChat(\n",
@@ -97,7 +119,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Agentsenv",
    "language": "python",
    "name": "python3"
   },
@@ -111,7 +133,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.8"
+   "version": "3.13.3"
   }
  },
  "nbformat": 4,
