--- a/08-multi-agent/code_samples/08-semantic-kernel.ipynb
+++ b/08-multi-agent/code_samples/08-semantic-kernel.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,9 +47,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "# User: 'I would like to go to Paris.'\n",
+      "# Agent - FrontDesk: 'Visit the Louvre Museum for an iconic art experience.'\n",
+      "# Agent - Concierge: 'The recommendation of visiting the Louvre Museum is quite popular and known for its tourist traffic. While it is a magnificent place, it might not provide the most local and authentic experience you're looking for. To refine the recommendation, consider suggesting activities that allow for interaction with local culture, such as exploring lesser-known neighborhoods, visiting local markets, or attending community events that showcase Parisian life away from the tourist crowds.'\n",
+      "# Agent - FrontDesk: 'Explore Montmartre for its artistic vibe and stunning views of the city.'\n",
+      "# Agent - Concierge: 'The recommendation to explore Montmartre is a step in the right direction, as it offers a blend of local culture and history. However, Montmartre can still attract many tourists. To refine the recommendation, consider suggesting locations or experiences that are truly off the beaten path, like seeking out hidden cafés, visiting smaller art studios, or participating in community events that reflect the authentic Parisian lifestyle. This approach will provide a more genuine experience of the city's culture.'\n",
+      "# Agent - FrontDesk: 'Visit the covered passages, like Passage des Panoramas, for unique shops and local charm.'\n",
+      "# Agent - Concierge: 'This recommendation to visit the covered passages, such as Passage des Panoramas, is a fantastic choice! These areas offer a delightful blend of local charm, unique shops, and a break from the more tourist-heavy spots. It sounds like a very authentic experience, so I approve this recommendation. Enjoy exploring!'\n",
+      "# IS COMPLETE: True\n"
+     ]
+    }
+   ],
    "source": [
     "async def main():\n",
     "    REVIEWER_NAME = \"Concierge\"\n",
@@ -153,7 +168,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Agentsenv",
    "language": "python",
    "name": "python3"
   },
@@ -167,7 +182,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.11"
+   "version": "3.13.3"
   }
  },
  "nbformat": 4,
